@@ -2,6 +2,7 @@
 Issue #2652 Support Run-AlPipeline with appRevision only
 Issue #2704 Wrong package name since today
 Change country mappings for countries hosted with Brazil app service
+Patch wrong DEMO license file in Business Central 21.0 artifacts
 
 4.0.3
 Support for specifying STANDARD or EXTENDED in UploadImportAndApply-ConfigPackageInBcContainer
